# pyaln

./: README.md  meta.yaml  setup.cfg
docs/: alignment.rst  conf.py  index.rst  installation.rst  requirements.txt  sequtils.rst  tutorial.rst
docs/_build/doctrees/: alignment.doctree  environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/pyaln/: index.doctree
docs/_build/doctrees/autoapi/pyaln/alignment/: index.doctree
docs/_build/html/: .buildinfo  alignment.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/pyaln/: index.rst.txt
docs/_build/html/_sources/autoapi/pyaln/alignment/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/pyaln/: index.html
docs/_build/html/autoapi/pyaln/alignment/: index.html
examples/: SBP2_protein.aln  SBP2_protein.fa  example_ali.fa  fep15_protein.stockholm  fep15_protein.with_candidate.fa
src/pyaln/: __init__.py  alignment.py  sequtils.py
src/pyaln/sequtils/: __init__.py
tests/: run_tests.py
