[metadata]
name = Pyaln
version = 0.0.1
author = Marco Mariotti
author_email = marco.mariotti.mm@gmail.com
description = Read, process, write multiple sequence alignments in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marco-mariotti/pyaln
project_urls =
https://github.com/marco-mariotti/pyaln
    Github Website=https://github.com/marco-mariotti 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
